--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.6.0",
+    "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "dotenv": "^16.0.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-typechain": "^0.3.5",
+    "i": "^0.3.7",
+    "npm": "^8.13.1",
     "solidity-coverage": "^0.7.21",
+    "ts-generator": "^0.1.1",
     "typechain": "^8.1.0"
   }
 }
